--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,11 @@ verify_ssl = true
 flask = "*"
 flask-sqlalchemy = "*"
 flask-marshmallow = "*"
+flask-cors = "*"
+flask-heroku = "*"
+gunicorn = "*"
+psycopg2 = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
